--- a/src/Monolegal.Presentation/Views/Shared/_Layout.cshtml
+++ b/src/Monolegal.Presentation/Views/Shared/_Layout.cshtml
@@ -24,6 +24,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Registro" asp-action="Index">Registros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Registro" asp-action="CrearRegistro">Registrar</a>
+                        </li>
                     </ul>
                 </div>
             </div>
