--- a/src/Monolegal.Presentation/Views/Shared/_Layout.cshtml
+++ b/src/Monolegal.Presentation/Views/Shared/_Layout.cshtml
@@ -30,6 +30,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Registro" asp-action="CrearRegistro">Registrar</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Notificar" asp-action="Index">Notificar</a>
+                        </li>
                     </ul>
                 </div>
             </div>
